--- a/Code/Lecture_08/Makefile
+++ b/Code/Lecture_08/Makefile
@@ -1,5 +1,9 @@
 CXX=nvcc
-CXXFLAGS=-Icuda_helper -O3 --compiler-options -Wall -arch=sm_37
+CXXFLAGS=-Icuda_helper -O3 -arch=sm_37
+# CXXFLAGS=-Icuda_helper --gpu-architecture=compute_50 --gpu-code=sm_50
+# CXXFLAGS=-Icuda_helper --gpu-architecture=compute_50 --gpu-code=sm_37
+# CXXFLAGS=-Icuda_helper --gpu-architecture=compute_37 --gpu-code=compute_37,sm_50
+# CXXFLAGS=-Icuda_helper --gpu-architecture=compute_37 --gpu-code=sm_37
 
 SRC := $(wildcard *.cpp) $(wildcard *.cu)
 EXE := $(patsubst %.cpp,%,$(filter %.cpp,$(SRC))) $(patsubst %.cu,%,$(filter %.cu,$(SRC)))
