--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Code/Lecture_06/bitonic_sort
 Code/Lecture_06/bitonic_sort_lab
 Code/Lecture_06/bitonic_sort_seq
 Code/Lecture_05/reduction_vector
+Code/Lecture_08/addMatrices
+Code/Lecture_08/bandwidthTest
+Code/Lecture_08/deviceQuery
+Code/Lecture_08/firstProgram
