--- a/Code/Lecture_04/Makefile
+++ b/Code/Lecture_04/Makefile
@@ -1,7 +1,7 @@
-CPP := /usr/local/bin/g++-9
-CPPFLAGS := -std=c++11 -Wall -O2 -fopenmp
-# CPP := g++
-# CPPFLAGS := -std=c++11 -Wall -O2 -I/usr/local/include -Xpreprocessor -fopenmp
+# CPP := /usr/local/bin/g++-9
+# CPPFLAGS := -std=c++11 -Wall -O2 -fopenmp
+CPP := g++
+CPPFLAGS := -std=c++11 -Wall -O2 -I/usr/local/include -Xpreprocessor -fopenmp
 LDFLAGS := -L/usr/local/lib -lomp
 
 SRC := $(wildcard *.cpp)
